--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
   "author": "Google LLC",
   "license": "Apache-2.0",
   "dependencies": {
-    "@google-cloud/storage": "^7.7.0",
+    "@google-cloud/storage": "^6.12.0",
     "axios": "^1.6.7",
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
     "ffprobe-static": "^3.1.0",
-    "firebase-admin": "^12.0.0",
+    "firebase-admin": "^11.9.0",
+    "fluent-ffmpeg": "2.1.2",
     "path": "^0.12.7",
-    "typescript": "^4.9.5"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/ffprobe-static": "^2.0.3",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.22",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
@@ -33,6 +36,7 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-typescript": "^0.14.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^4.9.5"
   }
 }
