--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/ffprobe-static": "^2.0.3",
     "@types/fluent-ffmpeg": "^2.1.24",
-    "@types/express": "^4.17.21",
     "@types/node": "^20.11.22",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
@@ -38,5 +38,11 @@
     "eslint-plugin-typescript": "^0.14.0",
     "prettier": "^2.2.1",
     "typescript": "^4.9.5"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "ffmpeg-static",
+      "protobufjs"
+    ]
   }
 }
