--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ffprobe-static": "^3.1.0",
     "firebase-admin": "^11.9.0",
     "fluent-ffmpeg": "2.1.2",
+    "fs": "0.0.1-security",
     "path": "^0.12.7",
     "uuid": "^9.0.0"
   },
