fix: add workflow trigger to run on push to main

--- a/.github/workflows/deploy-daily.yml
+++ b/.github/workflows/deploy-daily.yml
@@ -3,6 +3,9 @@
 name: Daily yt-dlp rebuild
 
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: '0 3 * * *'  # Daily at 03:00 UTC
   workflow_dispatch:
