--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,25 +1,42 @@
+# cloudbuild.yaml
+options:
+  substitutionOption: ALLOW_LOOSE
+
+substitutions:
+  _TRIGGER_NAME: "github-workflow"
+  _BRANCH_NAME: "main"
+  _COMMIT_SHA: "dev"
+
 steps:
+  # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'build',
-      '--no-cache',
-      '-t', 'us-central1-docker.pkg.dev/urm-app/process-audio-repo/process-audio:latest',
-      '.'
-    ]
+    args:
+      [
+        'build',
+        '--build-arg', 'CACHEBUST=${_COMMIT_SHA}',  # force latest yt-dlp layer
+        '-t', 'us-central1-docker.pkg.dev/urm-app/process-audio-repo/process-audio:${_COMMIT_SHA}',
+        '.'
+      ]
 
+  # Step 2: Push Docker image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'push',
-      'us-central1-docker.pkg.dev/urm-app/process-audio-repo/process-audio:latest'
-    ]
+    args:
+      [
+        'push',
+        'us-central1-docker.pkg.dev/urm-app/process-audio-repo/process-audio:${_COMMIT_SHA}'
+      ]
 
+  # Step 3: Deploy to Cloud Run (private service)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
-    args: [
-      'run', 'deploy', 'process-audio',
-      '--image', 'us-central1-docker.pkg.dev/urm-app/process-audio-repo/process-audio:latest',
-      '--region', 'us-central1',
-      '--platform', 'managed',
-    ]
+    args:
+      [
+        'run', 'deploy', 'process-audio',
+        '--image', 'us-central1-docker.pkg.dev/urm-app/process-audio-repo/process-audio:${_COMMIT_SHA}',
+        '--region', 'us-central1',
+        '--platform', 'managed'
+      ]
+
 images:
-  - 'us-central1-docker.pkg.dev/urm-app/process-audio-repo/process-audio:latest'
+  - 'us-central1-docker.pkg.dev/urm-app/process-audio-repo/process-audio:${_COMMIT_SHA}'
+
