--- a/.github/workflows/deploy-daily.yml
+++ b/.github/workflows/deploy-daily.yml
@@ -25,5 +25,5 @@ jobs:
       # Step 3: Trigger Cloud Build
       - name: Trigger Cloud Build
         run: |
-          gcloud builds submit --config cloudbuild.yaml \
+          gcloud beta builds submit --config cloudbuild.yaml \
               --substitutions=TRIGGER_NAME="github-actions",BRANCH_NAME="${{ github.ref_name }}",COMMIT_SHA="${{ github.sha }}",REPO_NAME="${{ github.repository }}",REPO_FULL_NAME="${{ github.repository }}",TAG_NAME="${{ github.ref_name }}",REF_NAME="${{ github.ref_name }}"
