CI/CD: Suppress warnings from python build

--- a/.github/workflows/deploy-daily.yml
+++ b/.github/workflows/deploy-daily.yml
@@ -1,5 +1,6 @@
-name: Build and Deploy Process Audio
-
+name: Build and Deploy Process Audio 
+env:
+  PYTHONWARNINGS: "ignore" # suppress warnings from app engine libraries
 on:
   push:
     branches:
