--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Google LLC",
   "license": "Apache-2.0",
   "dependencies": {
+    "@google-cloud/logging-winston": "^6.0.1",
     "@google-cloud/storage": "^6.12.0",
     "axios": "^1.6.7",
     "express": "^4.18.2",
@@ -24,7 +25,8 @@
     "fluent-ffmpeg": "2.1.2",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
