--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "commonjs",
   "scripts": {
     "start": "node ./dist/index.js",
-    "build": "pnpm tsc"
+    "build": "pnpm tsc",
+    "dev": "just dev"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -19,10 +20,9 @@
     "@google-cloud/storage": "^6.12.0",
     "axios": "^1.6.7",
     "express": "^4.18.2",
-    "ffmpeg-static": "^5.2.0",
+    "ffmpeg-static": "^5.3.0",
     "ffprobe-static": "^3.1.0",
     "firebase-admin": "^11.9.0",
-    "fluent-ffmpeg": "2.1.2",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
     "uuid": "^9.0.0",
@@ -31,7 +31,6 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/ffprobe-static": "^2.0.3",
-    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.11.22",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
