chore: update max instances

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -40,6 +40,8 @@ steps:
         '--cpu-boost',
         '--concurrency',
         '1',
+        '--max-instances',
+        '10',
       ]
 
 images:
