fix: YouTube/process-audio performance and duplicate instance spin-up
- mergeFiles: use unique list-{timestamp}-{id}.txt per request to avoid
  temp-file collision under concurrency
- processYouTubeUrl: write cookies to per-request path in os.tmpdir() and
  clean up in getYouTubeAudioUrl, processYouTubeUrl, downloadYouTubeSection
- utils.logMemoryUsage: accept optional tempFiles set and sum only those
  sizes (no full tmpdir scan); satisfies GCP 'memory including /tmp'
- processAudio: idempotency check — skip when audioStatus is PROCESSED
  (e.g. task retry); use existingStatus for first update
- consts: clarify TIMEOUT_SECONDS comment (60 min, aligned with queue)
- cloudbuild: add --no-cpu-throttling so CPU stays allocated for request

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -38,6 +38,7 @@ steps:
         '--memory',
         '4Gi',
         '--cpu-boost',
+        '--no-cpu-throttling',
         '--concurrency',
         '1',
         '--max-instances',
