--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,44 @@ node_modules
 cookies*.txt
 *.log
 .DS_Store
-downloaded-logs-20260122-234405.json
 
+.agents
+.agent
+.claude
+.codebuddy
+.commandcode
+.codex
+.continue
+.crush
+.factory
+.gemini
+.github
+.cursor
+.deepseek
+.grok
+.huggingface
+.kimi
+.kong
+.mistral
+.neon
+.openai
+.perplexity
+.prompt
+.qwen
+.replicate
+.goose
+.kiro
+.mcpjam
+.cline
+.neovate
+.opencode
+.openhands
+.kilocode
+.mux
+.pi
+.trae
+.roo
+.windsurf
+.zencoder
 logs/
+skills
